--- a/index.html
+++ b/index.html
@@ -6,14 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <!--css-->
-    <link rel="stylesheet" href="/jnBlog.css">
+    <link rel="stylesheet" href="jnBlog.css">
     <title>AJN's portfolio</title>
     <!--폰트(나눔명조)-->
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Nanum+Myeongjo&display=swap" rel="stylesheet">
     <!--fontawesome-->
     <script src="https://kit.fontawesome.com/946dc76c2e.js" crossorigin="anonymous"></script>
-    <!--파비콘-->
-    <link rel="favicon" href="/source/favicon.ico">
     <!--부트스트랩-->
     
 </head>
@@ -148,7 +146,7 @@
         <div class="Archiving_Content">
             <div class="Archiving_Github"><!--github박스-->
                 <div class="Archiving_Github_section1">
-                    <img src="/source/github.png" alt="github" width="100px" height="100px">
+                    <img src="source/github.png" alt="github" width="100px" height="100px">
                 </div>
                 <div class="Archiving_Github_section2">
                     <ul>
@@ -162,7 +160,7 @@
             </div><!--github박스-->
             <div class="Archiving_NaverBlog"><!--naver박스-->
                 <div class="Archiving_NaverBlog_section1">
-                    <img src="/source/naverBlog.png" alt="github" width="100px" height="100px">
+                    <img src="source/naverBlog.png" alt="github" width="100px" height="100px">
                 </div>
                 <div class="Archiving_NaverBlog_section2">
                     <ul>
@@ -185,7 +183,7 @@
                 <p id="Project_Content_doroowaTitle">DOROOWA 웹사이트</p>
                 <p id="Project_Content_doroowaTitle_sub">(20210401 4人 팀 프로젝트)</p>
                 <div class="Project_Content_doroowa_section1">
-                    <img id="Project_Content_doroowa_section1_picture" src="/source/doroowa.png" alt="doroowa" width="200px" height="200px">
+                    <img id="Project_Content_doroowa_section1_picture" src="source/doroowa.png" alt="doroowa" width="200px" height="200px">
                 </div>
                 <div class="Project_Content_doroowa_section2">
                     <strong style="font-weight: bolder; font-size: larger;">'클래스 101'</strong>페이지를 모티브로 하여 제작한 웹사이트 입니다.<br>
@@ -204,7 +202,7 @@
                 <p id="Project_Content_AJNPortfolioTitle">AJNPortfolio 웹사이트</p>
                 <p id="Project_Content_AJNPortfolioTitle_sub">(20221209 1人 개인 프로젝트)</p>
                 <div class="Project_Content_AJNPortfolio_section1">
-                    <img id="Project_Content_AJNPortfolio_section1_picture" src="/source/AJNPortfolio_capture.png" alt="AJNPortfolio" width="400px" height="300px">
+                    <img id="Project_Content_AJNPortfolio_section1_picture" src="source/AJNPortfolio_capture.png" alt="AJNPortfolio" width="400px" height="300px">
                 </div>
                 <div class="Project_Content_AJNPortfolio_section2">
                     <strong style="font-weight: bolder; font-size: larger;">현재 보고계신 페이지</strong>입니다.<br>
@@ -225,6 +223,6 @@
         © 2022. Ahn Jong Yun. All rights reserved.
     </div>
     <!--JS파일 불러오기-->
-    <script src="/jnBlog.js"></script>
+    <script src="jnBlog.js"></script>
 </body>
 </html>
