--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                     이후에 next.js, React 기술들을 더 공부해서 반응형 웹 포트폴리오를<br>
                     개발할 계획에 있습니다.(버전2 개발계획)
                     <span class="Project_Content_AJNPortfolio_section2_link">
-                        <!-- <a href="https://github.com/dks044/AJNPortfolio" target='_blank'><i class="fa-brands fa-square-github"></i></a> -->
+                        <a href="https://github.com/dks044/JnBlogProject" target='_blank'><i class="fa-brands fa-square-github"></i></a>
                      </span>
                 </div>
             </div><!--project_AJNPortfolio 끝-->
