--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                     JS,HTML5,CSS3 등 프론트엔드 실력을 향상했습니다.<br>
                     어떠한 템플릿도 사용하지않고, 직접만들었습니다<br>
                     이후에 next.js, React 기술들을 더 공부해서 반응형 웹 포트폴리오를<br>
-                    개발할 계획에 있습니다.(버전2 개발계획)<BR><BR>
+                    개발할 계획에 있습니다.(버전2 개발계획)<br><br>
                     <span class="Project_Content_AJNPortfolio_section2_link">
                         <a href="https://github.com/dks044/JnBlogProject" target='_blank'><i class="fa-brands fa-square-github"></i></a>
                      </span>
