--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                 </div>
             </div><!--Project_Doroowa 끝-->
             <div class="Project_Content_AJNPortfolio"><!--project_AJNPortfolio 시작-->
-                <p id="Project_Content_AJNPortfolioTitle">AJNPortfolio 웹사이트</p>
+                <p id="Project_Content_AJNPortfolioTitle">포트폴리오 웹사이트</p>
                 <p id="Project_Content_AJNPortfolioTitle_sub">(20221209 1人 개인 프로젝트)</p>
                 <div class="Project_Content_AJNPortfolio_section1">
                     <img id="Project_Content_AJNPortfolio_section1_picture" src="/JnBlogProject/source/AJNPortfolio_capture.png" alt="AJNPortfolio" width="400px" height="300px">
