JNA_QNA_프로젝트 항목 업데이트

--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
     <!--css-->
     <link rel="stylesheet" href="/JnBlogProject/jnBlog.css">
     <title>AJN's portfolio</title>
@@ -12,8 +11,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Nanum+Myeongjo&display=swap" rel="stylesheet">
     <!--fontawesome-->
     <script src="https://kit.fontawesome.com/946dc76c2e.js" crossorigin="anonymous"></script>
-    <!--부트스트랩-->
-    
+    <!-- Bootstrap CSS
+    <link rel="stylesheet" type="text/css" href="/JnBlogProject/bootstrap.css"> -->
 </head>
 <body>
     <nav class="nav" id="nav"><!--nav시작-->
@@ -194,12 +193,12 @@
                     <span class="Project_Content_doroowa_section2_link">
                         <a href="https://github.com/dks044/doroowa" target='_blank'><i class="fa-brands fa-square-github"></i></a>
                         <a href="https://www.youtube.com/watch?v=aQVnRqvgxLw&feature=youtu.be" target='_blank'><i class="fa-brands fa-square-youtube"></i></a>
-                        <a href="https://docs.google.com/presentation/d/1-mk7CkX1Wq_ICACtAogSdXrBn6APgwY4/edit"><i class="fa-solid fa-file-powerpoint"></i></a>
+                        <a href="https://docs.google.com/presentation/d/1-mk7CkX1Wq_ICACtAogSdXrBn6APgwY4/edit" target='_blank'><i class="fa-solid fa-file-powerpoint"></i></a>
                     </span> 
                 </div>
             </div><!--Project_Doroowa 끝-->
             <div class="Project_Content_AJNPortfolio"><!--project_AJNPortfolio 시작-->
-                <p id="Project_Content_AJNPortfolioTitle">포트폴리오 웹사이트</p>
+                <p id="Project_Content_AJNPortfolioTitle">AJNPortfolio 웹사이트</p>
                 <p id="Project_Content_AJNPortfolioTitle_sub">(20221209 1人 개인 프로젝트)</p>
                 <div class="Project_Content_AJNPortfolio_section1">
                     <img id="Project_Content_AJNPortfolio_section1_picture" src="/JnBlogProject/source/AJNPortfolio_capture.png" alt="AJNPortfolio" width="400px" height="300px">
@@ -217,6 +216,32 @@
                     </div>
                 </div>
             </div><!--project_AJNPortfolio 끝-->
+            <div class="Project_Content_AJNQNA">
+                <h5 id="Project_Content_AJNQNA_Title">AJN's QnA Coummity</h5><h3 id="Project_Content_AJNQNA_subTitle"> (20221225 1人 개인 프로젝트)</h3>
+                <div clas="Project_Content_AJNQNA_TitleImage"><img src="/JnBlogProject/source/JNA_QnA.gif" alt="QnA 타이틀" style="width: 900px;height: 400px;"></div>
+                <div class="Project_Content_AJNQNA_section">
+                    <p style="font-size: 30px;">📌 Summary</p>
+                    <hr>
+                    저에게 QnA할 수 있는 간단한 콘셉트의 커뮤니티 사이트 입니다.
+                    <ul style="list-style: none;">
+                        <li>1. <strong style="font-weight: bolder;">스프링 시큐리티</strong>를 활용한 보안 기술 적용</li>
+                        <li>2. <strong>부트스트랩</strong>을 활용한 깔끔한 UI / 동적인 화면</li>
+                        <li>3. 검색, 페이징, 정렬 등 깔끔한 게시판(커뮤니티) 기능 구현</li>
+                        <li>4. <strong>스프링부트 3.0</strong> 웹프레임워크 활용</li>
+                    </ul>
+                    <br>
+                    <p style="font-size: 30px;">🔨 Technology Stack(s)</p>
+                    <hr>
+                    <p>Frontend : JavaScript, CSS,HTML, BootStrap</p>
+                    <p>Backend : H2 DATABASE, JAVA, SpringBoot</p>
+                    <p>Deployment : Spring Tool Suite 4</p>
+                    <hr>
+                    <span class="Project_Content_AJNQNA_section_link">
+                        <a href="https://github.com/dks044/AJN-QnACoummity" target='_blank'><i class="fa-brands fa-square-github"></i></a>
+                        <a href="https://youtu.be/jEo_yRkK008" target='_blank'><i class="fa-brands fa-square-youtube"></i></a>
+                    </span>
+                </div>
+            </div>
         </div><!--Project_Content 끝-->
     </div><!--Project 끝-->    
     <div id="footer">
