QNA 포트폴리오 설명 추가

--- a/index.html
+++ b/index.html
@@ -228,6 +228,7 @@
                         <li>2. <strong>부트스트랩</strong>을 활용한 깔끔한 UI / 동적인 화면</li>
                         <li>3. 검색, 페이징, 정렬 등 깔끔한 게시판(커뮤니티) 기능 구현</li>
                         <li>4. <strong>스프링부트 3.0</strong> 웹프레임워크 활용</li>
+                        <li>5. AWS를 이용한 직접 배포.</li>
                     </ul>
                     <br>
                     <p style="font-size: 30px;">🔨 Technology Stack(s)</p>
@@ -239,6 +240,7 @@
                     <span class="Project_Content_AJNQNA_section_link">
                         <a href="https://github.com/dks044/AJN-QnACoummity" target='_blank'><i class="fa-brands fa-square-github"></i></a>
                         <a href="https://youtu.be/jEo_yRkK008" target='_blank'><i class="fa-brands fa-square-youtube"></i></a>
+                        <a href="http://52.78.217.39:8080/" target="_blank"><i class="fa-solid fa-square-arrow-up-right"></i></a>
                     </span>
                 </div>
             </div>
