--- a/index.html
+++ b/index.html
@@ -130,11 +130,19 @@
                 </div>
             </div>
             <br>
-            <div class="skills_Tool"><!--tool_박스-->
+            <div class="skills_Deployment"><!--Deployment_박스-->
+                <p id="skills_Deployment_Title"><i class="fa-solid fa-tractor"></i> Deployment</p>
+                <div class="skills_Deployment_stack">
+                    <div class="skills_stackBox" id="skills_stackBox_aws"></div>
+                </div>
+            </div>
+            <br>
+            <div class="skills_Tool"><!--Tool_박스-->
                 <p id="skills_Tool_Title"><i class="fa-solid fa-gear"></i> Tool</p>
                 <div class="skills_Tool_stack">
                     <div class="skills_stackBox" id="skills_stackBox_sts"></div>
                     <div class="skills_stackBox" id="skills_stackBox_vscode"></div>
+                    
                 </div>
             </div>
         </div>
@@ -190,6 +198,7 @@
                     강사회원은 오픈마켓 메커니즘으로 본인의 강의컨텐츠를 업로드 할수있고,<br>
                     수강생회원은 업로드 되있는 '강의컨텐츠'를 검색 및 찜하기 등<br> 강의 웹서비스를 이용할 수 있습니다.<br>
                     오픈마켓(쇼핑몰) 메커니즘 개념의 자유로운 강의 웹 서비스를 구현했습니다.<br><br>
+                    
                     <span class="Project_Content_doroowa_section2_link">
                         <a href="https://github.com/dks044/doroowa" target='_blank'><i class="fa-brands fa-square-github"></i></a>
                         <a href="https://www.youtube.com/watch?v=aQVnRqvgxLw&feature=youtu.be" target='_blank'><i class="fa-brands fa-square-youtube"></i></a>
@@ -235,7 +244,8 @@
                     <hr>
                     <p>Frontend : JavaScript, CSS,HTML, BootStrap</p>
                     <p>Backend : H2 DATABASE, JAVA, SpringBoot</p>
-                    <p>Deployment : Spring Tool Suite 4</p>
+                    <p>Deployment : Amazon Web Service</p>
+                    <p>Tool : Spring Tool Suite 4</p>
                     <hr>
                     <span class="Project_Content_AJNQNA_section_link">
                         <a href="https://github.com/dks044/AJN-QnACoummity" target='_blank'><i class="fa-brands fa-square-github"></i></a>
