--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                     포트폴리오 용도로 제작한 웹사이트 입니다, 부족한 프론트엔드 실력을 키우기<br>
                     위해 시작했으며, 그 과정에서 디자인감각을 키웠고,<br>
                     JS,HTML5,CSS3 등 프론트엔드 실력을 향상했습니다.<br>
-                    어떠한 템플릿도 사용하지않고, 직접만들었습니다<br>
+                    어떠한 템플릿도 사용하지않고, 직접만들었습니다<br><br><br>
                     <div class="Project_Content_AJNPortfolio_section2_link">
                         <a href="https://github.com/dks044/JnBlogProject" target='_blank'><i class="fa-brands fa-square-github"></i></a>
                     </div>
@@ -229,7 +229,7 @@
                 <div class="Project_Content_AJNQNA_section">
                     <p style="font-size: 30px;">📌 Summary</p>
                     <hr>
-                    저에게 QnA할 수 있는 간단한 콘셉트의 커뮤니티 사이트 입니다.
+                    QnA할 수 있는 간단한 콘셉트의 커뮤니티 사이트 입니다.
                     <ul style="list-style: none;">
                         <li>1. <strong style="font-weight: bolder;">스프링 시큐리티</strong>를 활용한 보안 기술 적용</li>
                         <li>2. <strong>부트스트랩</strong>을 활용한 깔끔한 UI / 동적인 화면</li>
